# Skypro_well_3

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
news/: 27-10-2024_tesla.json  27-10-2024_twitter.json  27-10-2024_twitter_.json  27-10-2024_тесла.json
src/: config.py  external_api.py  finance_operations.py  masks.py  news.py  save_to_file.py  utils.py
tests/: conftest.py  test_external_api.py  test_finance_operations.py  test_returns_a_list_of_transactions.py
